// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditWebsiteSection should redirect if required entity is not found 1`] = `
<EditWebsiteSection
  editSectionDispatch={[MockFunction]}
  history={
    Object {
      "push": [MockFunction] {
        "calls": Array [
          Array [
            "/dashboard/sections",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "id": "1234",
      },
    }
  }
  sections={
    Array [
      Object {
        "__v": 0,
        "_id": "5c9fdcf69c5e1a0d891d506e",
        "array": Array [],
        "body": "test",
        "category": "test",
        "dateCreated": "1553980662739",
        "dateIn": "124231221",
        "files": Array [
          Object {
            "title": "sample file",
            "url": "https://iviidev.info/downloads/files/sample.pdf",
          },
        ],
        "heading1": "test1",
        "images": Array [
          "https://iviidev.info/downloads/images/sample.jpg",
        ],
        "pinned": false,
      },
    ]
  }
>
  <InputForm
    addCloudinaryImage={[Function]}
    addCloudinaryRawFile={[Function]}
    addRow={[Function]}
    allEntities={
      Array [
        Object {
          "__v": 0,
          "_id": "5c9fdcf69c5e1a0d891d506e",
          "array": Array [],
          "body": "test",
          "category": "test",
          "dateCreated": "1553980662739",
          "dateIn": "124231221",
          "files": Array [
            Object {
              "title": "sample file",
              "url": "https://iviidev.info/downloads/files/sample.pdf",
            },
          ],
          "heading1": "test1",
          "images": Array [
            "https://iviidev.info/downloads/images/sample.jpg",
          ],
          "pinned": false,
        },
      ]
    }
    entity={
      Object {
        "category": "DEVOTIONAL",
        "files": Array [],
        "images": Array [],
        "tags": Array [],
        "videos": Array [],
      }
    }
    isNew={false}
    onArrayChange={[Function]}
    onBooleanValueChanged={[Function]}
    onChange={[Function]}
    onSubmit={[Function]}
    onTagAdd={[Function]}
    onTagDelete={[Function]}
    onTagDrag={[Function]}
    removeRow={[Function]}
    tagSuggestions={Array []}
    title="Edit Website Section"
  >
    <div>
      <h1>
        Edit Website Section
      </h1>
      <form
        className="inputForm"
        id="customInputForm"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
          key="0"
        >
          <div>
            <input
              checked={false}
              className="form-control"
              id="pinned"
              name="pinned"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
          <div>
            Pinned
          </div>
        </div>
        <div
          className="form-group"
          key="1"
        >
          <div>
            Images
            <span
              className="red"
              title="Required"
            >
               *
            </span>
          </div>
          <button
            className="btn btn-sm m-2 btn-outline-primary"
            id="addRowBt"
            onClick={[Function]}
            type="button"
          >
            Upload Image
          </button>
        </div>
        <div
          className="form-group"
          key="2"
        >
          <div>
            Category
            <span
              className="red"
              title="Required"
            >
               *
            </span>
          </div>
          <select
            className="form-control"
            id="category"
            name="category"
            onChange={[Function]}
            required={true}
            value="DEVOTIONAL"
          >
            <option
              key="0"
              value="DEVOTIONAL"
            >
              DEVOTIONAL
            </option>
            <option
              key="1"
              value="SKILL OF PROBLEM SOLVING"
            >
              SKILL OF PROBLEM SOLVING
            </option>
            <option
              key="2"
              value="SKILL OF KNOWING AND LIVING WITH ONESELF"
            >
              SKILL OF KNOWING AND LIVING WITH ONESELF
            </option>
            <option
              key="3"
              value="SKILL OF KNOWING AND LIVING WITH OTHERS"
            >
              SKILL OF KNOWING AND LIVING WITH OTHERS
            </option>
            <option
              key="4"
              value="RESOURCE"
            >
              RESOURCE
            </option>
            <option
              key="5"
              value="QUIZ"
            >
              QUIZ
            </option>
            <option
              key="6"
              value="GALLERY"
            >
              GALLERY
            </option>
            <option
              key="7"
              value="ABOUT"
            >
              ABOUT
            </option>
            <option
              key="8"
              value="CAROUSEL"
            >
              CAROUSEL
            </option>
            <option
              key="9"
              value="CONTACT"
            >
              CONTACT
            </option>
          </select>
        </div>
        <div
          className="form-group"
          key="3"
        >
          <div>
            Date
          </div>
          <input
            className="form-control"
            defaultValue=""
            id="dateIn"
            name="dateIn"
            onChange={[Function]}
            type="date"
          />
        </div>
        <div
          className="form-group"
          key="4"
        >
          <div>
            Heading
          </div>
          <input
            className="form-control"
            defaultValue=""
            id="heading1"
            name="heading1"
            onChange={[Function]}
            type="text"
          />
        </div>
        <div
          className="form-group"
          key="5"
        >
          <div>
            Body
            <span
              className="red"
              title="Required"
            >
               *
            </span>
          </div>
          <textarea
            className="form-control"
            id="body"
            name="body"
            onChange={[Function]}
            required={true}
            rows="10"
            value=""
          />
        </div>
        <div
          className="form-group"
          key="6"
        >
          <div>
            Files
          </div>
          <div>
            <div
              className="groupedValues"
            />
          </div>
          <button
            className="btn btn-sm m-2 btn-outline-primary"
            id="addRowBt"
            onClick={[Function]}
            type="button"
          >
            Add Another
          </button>
        </div>
        <div
          className="form-group"
          key="7"
        >
          <div>
            Youtube Videos
          </div>
          <div>
            <div
              className="groupedValues"
            />
          </div>
          <button
            className="btn btn-sm m-2 btn-outline-primary"
            id="addRowBt"
            onClick={[Function]}
            type="button"
          >
            Add Another
          </button>
        </div>
        <div
          className="mb-2"
        >
          <span
            className="red"
            title="Required"
          >
             * 
          </span>
          <span>
            Required Fields
          </span>
        </div>
        <button
          className="btn btn-primary mr-3"
          type="submit"
        >
          Save
        </button>
      </form>
    </div>
  </InputForm>
</EditWebsiteSection>
`;

exports[`EditWebsiteSection should render correctly 1`] = `
<EditWebsiteSection
  editSectionDispatch={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  match={
    Object {
      "params": Object {
        "id": "5c9fdcf69c5e1a0d891d506e",
      },
    }
  }
  sections={
    Array [
      Object {
        "__v": 0,
        "_id": "5c9fdcf69c5e1a0d891d506e",
        "array": Array [],
        "body": "test",
        "category": "test",
        "dateCreated": "1553980662739",
        "dateIn": "124231221",
        "files": Array [
          Object {
            "title": "sample file",
            "url": "https://iviidev.info/downloads/files/sample.pdf",
          },
        ],
        "heading1": "test1",
        "images": Array [
          "https://iviidev.info/downloads/images/sample.jpg",
        ],
        "pinned": false,
      },
    ]
  }
>
  <InputForm
    addCloudinaryImage={[Function]}
    addCloudinaryRawFile={[Function]}
    addRow={[Function]}
    allEntities={
      Array [
        Object {
          "__v": 0,
          "_id": "5c9fdcf69c5e1a0d891d506e",
          "array": Array [],
          "body": "test",
          "category": "test",
          "dateCreated": "1553980662739",
          "dateIn": "124231221",
          "files": Array [
            Object {
              "title": "sample file",
              "url": "https://iviidev.info/downloads/files/sample.pdf",
            },
          ],
          "heading1": "test1",
          "images": Array [
            "https://iviidev.info/downloads/images/sample.jpg",
          ],
          "pinned": false,
        },
      ]
    }
    entity={
      Object {
        "__v": 0,
        "_id": "5c9fdcf69c5e1a0d891d506e",
        "array": Array [],
        "body": "test",
        "category": "test",
        "dateCreated": "1553980662739",
        "dateIn": "124231221",
        "files": Array [
          Object {
            "title": "sample file",
            "url": "https://iviidev.info/downloads/files/sample.pdf",
          },
        ],
        "heading1": "test1",
        "images": Array [
          "https://iviidev.info/downloads/images/sample.jpg",
        ],
        "pinned": false,
        "tags": Array [],
        "videos": Array [],
      }
    }
    isNew={false}
    onArrayChange={[Function]}
    onBooleanValueChanged={[Function]}
    onChange={[Function]}
    onSubmit={[Function]}
    onTagAdd={[Function]}
    onTagDelete={[Function]}
    onTagDrag={[Function]}
    removeRow={[Function]}
    tagSuggestions={Array []}
    title="Edit Website Section"
  >
    <div>
      <h1>
        Edit Website Section
      </h1>
      <form
        className="inputForm"
        id="customInputForm"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
          key="0"
        >
          <div>
            <input
              checked={false}
              className="form-control"
              id="pinned"
              name="pinned"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <div>
            Pinned
          </div>
        </div>
        <div
          className="form-group"
          key="1"
        >
          <div>
            Images
            <span
              className="red"
              title="Required"
            >
               *
            </span>
          </div>
          <div>
            <div
              className="website-section-images responsive-flex"
            >
              <div
                className="text-center"
                key="0"
              >
                <div
                  className="imageHolder"
                >
                  <img
                    alt="poster"
                    src="https://iviidev.info/downloads/images/sample.jpg"
                  />
                </div>
                <button
                  className="iconBorderedButton red"
                  id="removeRowBt"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className="icon red"
                    fixedWidth={false}
                    flip={null}
                    icon="trash"
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash fa-w-14 icon red"
                      data-icon="trash"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                  <small>
                    Delete Image
                  </small>
                </button>
              </div>
            </div>
          </div>
          <button
            className="btn btn-sm m-2 btn-outline-primary"
            id="addRowBt"
            onClick={[Function]}
            type="button"
          >
            Upload Image
          </button>
        </div>
        <div
          className="form-group"
          key="2"
        >
          <div>
            Category
            <span
              className="red"
              title="Required"
            >
               *
            </span>
          </div>
          <select
            className="form-control"
            id="category"
            name="category"
            onChange={[Function]}
            required={true}
            value="test"
          >
            <option
              key="0"
              value="DEVOTIONAL"
            >
              DEVOTIONAL
            </option>
            <option
              key="1"
              value="SKILL OF PROBLEM SOLVING"
            >
              SKILL OF PROBLEM SOLVING
            </option>
            <option
              key="2"
              value="SKILL OF KNOWING AND LIVING WITH ONESELF"
            >
              SKILL OF KNOWING AND LIVING WITH ONESELF
            </option>
            <option
              key="3"
              value="SKILL OF KNOWING AND LIVING WITH OTHERS"
            >
              SKILL OF KNOWING AND LIVING WITH OTHERS
            </option>
            <option
              key="4"
              value="RESOURCE"
            >
              RESOURCE
            </option>
            <option
              key="5"
              value="QUIZ"
            >
              QUIZ
            </option>
            <option
              key="6"
              value="GALLERY"
            >
              GALLERY
            </option>
            <option
              key="7"
              value="ABOUT"
            >
              ABOUT
            </option>
            <option
              key="8"
              value="CAROUSEL"
            >
              CAROUSEL
            </option>
            <option
              key="9"
              value="CONTACT"
            >
              CONTACT
            </option>
          </select>
        </div>
        <div
          className="form-group"
          key="3"
        >
          <div>
            Date
          </div>
          <input
            className="form-control"
            defaultValue="1970-01-02"
            id="dateIn"
            name="dateIn"
            onChange={[Function]}
            type="date"
          />
        </div>
        <div
          className="form-group"
          key="4"
        >
          <div>
            Heading
          </div>
          <input
            className="form-control"
            defaultValue="test1"
            id="heading1"
            name="heading1"
            onChange={[Function]}
            type="text"
          />
        </div>
        <div
          className="form-group"
          key="5"
        >
          <div>
            Body
            <span
              className="red"
              title="Required"
            >
               *
            </span>
          </div>
          <textarea
            className="form-control"
            id="body"
            name="body"
            onChange={[Function]}
            required={true}
            rows="10"
            value="test"
          />
        </div>
        <div
          className="form-group"
          key="6"
        >
          <div>
            Files
          </div>
          <div>
            <div
              className="groupedValues"
            >
              <div
                className="flex-container single-element"
                key="0"
              >
                <div
                  className="inputFields"
                >
                  <input
                    className="form-control files"
                    name="title"
                    onChange={[Function]}
                    placeholder="Title"
                    type="text"
                    value="sample file"
                  />
                  <input
                    className="form-control files"
                    name="description"
                    onChange={[Function]}
                    placeholder="Description"
                    type="text"
                    value=""
                  />
                  <input
                    className="form-control files"
                    name="source"
                    onChange={[Function]}
                    placeholder="Source"
                    required={true}
                    type="text"
                    value=""
                  />
                  <button
                    className="iconBorderedButton m-2"
                    id="addRowBt"
                    onClick={[Function]}
                    title="Upload file"
                    type="button"
                  >
                    <FontAwesomeIcon
                      border={false}
                      className="icon green"
                      fixedWidth={false}
                      flip={null}
                      icon="cloud-upload-alt"
                      inverse={false}
                      listItem={false}
                      mask={null}
                      pull={null}
                      pulse={false}
                      rotation={null}
                      size={null}
                      spin={false}
                      symbol={false}
                      title=""
                      transform={null}
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-cloud-upload-alt fa-w-20 icon green"
                        data-icon="cloud-upload-alt"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 640 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zM393.4 288H328v112c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16V288h-65.4c-14.3 0-21.4-17.2-11.3-27.3l105.4-105.4c6.2-6.2 16.4-6.2 22.6 0l105.4 105.4c10.1 10.1 2.9 27.3-11.3 27.3z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </FontAwesomeIcon>
                    Upload File
                  </button>
                </div>
                <button
                  className="iconButton"
                  id="removeRowBt"
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className="icon red"
                    fixedWidth={false}
                    flip={null}
                    icon="trash"
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash fa-w-14 icon red"
                      data-icon="trash"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                </button>
              </div>
            </div>
          </div>
          <button
            className="btn btn-sm m-2 btn-outline-primary"
            id="addRowBt"
            onClick={[Function]}
            type="button"
          >
            Add Another
          </button>
        </div>
        <div
          className="form-group"
          key="7"
        >
          <div>
            Youtube Videos
          </div>
          <div>
            <div
              className="groupedValues"
            />
          </div>
          <button
            className="btn btn-sm m-2 btn-outline-primary"
            id="addRowBt"
            onClick={[Function]}
            type="button"
          >
            Add Another
          </button>
        </div>
        <div
          className="mb-2"
        >
          <span
            className="red"
            title="Required"
          >
             * 
          </span>
          <span>
            Required Fields
          </span>
        </div>
        <button
          className="btn btn-primary mr-3"
          type="submit"
        >
          Save
        </button>
      </form>
    </div>
  </InputForm>
</EditWebsiteSection>
`;
